Created test form

--- a/TriageEngine/TriageEngine.csproj
+++ b/TriageEngine/TriageEngine.csproj
@@ -6,4 +6,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <Content Include="Forms\**\*.json" CopyToOutputDirectory="PreserveNewest" />
+    </ItemGroup>
 </Project>
