--- a/TriageEngine/TriageEngine.csproj
+++ b/TriageEngine/TriageEngine.csproj
@@ -9,4 +9,8 @@
     <ItemGroup>
         <Content Include="Forms\**\*.json" CopyToOutputDirectory="PreserveNewest" />
     </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.2" />
+    </ItemGroup>
 </Project>
