--- a/TriageEngine.Console/TriageEngine.Console.csproj
+++ b/TriageEngine.Console/TriageEngine.Console.csproj
@@ -14,6 +14,8 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.4" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
+      <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     </ItemGroup>
 
 </Project>
