--- a/TriageEngine/TriageEngine.csproj
+++ b/TriageEngine/TriageEngine.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
       <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.2" />
     </ItemGroup>
 </Project>
